--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,9 @@
 .json {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     text-align: left;
+}
+a {
+    border: solid black 1px;
+    text-decoration: none;
+    padding:5px;
 }
