--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 body{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     margin:0px;
+    background-color: ivory;
 }
 header {
     background-color: darkcyan;
@@ -9,17 +10,18 @@ header {
 
 }
 .div_maior {
-    /*margin-left:200px;*/
-    margin-right:50px;
     border:black solid 1px;
     padding:5px;
     display:inline-block;
+    width:20%;
 }
 
 a {
     border: solid black 1px;
     text-decoration: none;
-    padding:5px;
+    padding: 5px;
+    margin-left: 20px;
+    
     
 }
 h2 {
@@ -31,9 +33,13 @@ button {
 .json {
     display:inline-block;
     float:right;
-    width:400px;
-    margin-right:500px;
+    width:35%;
+    margin-right:40%;
     border:solid black 1px;
-    word-break: break-all;
+    letter-spacing: 2px;
     padding:20px;
+    font-family: arial;
+}
+section {
+    font-size:large;
 }
